2003-06-17  Jochen Hoenicke  <jochen@gnu.org>

	* stage2/fsys_reiserfs.c (reiserfs_mount): Clear the node cache.
	This fixes a problem where files from other partitions appear at
	the wrong partition.  Problem reported by Johan Regin.

2003-05-04  Yoshinori K. Okuji  <okuji@enbug.org>

	* docs/grub.texi (partnew): Fixed the inconsistency between the
	implementation and the documentation. The last argument is the
	length instead of the ending address.
	Reported by Daniel Farrell <s2108287@student.rmit.edu.au>.

2003-03-19  Yoshinori K. Okuji  <okuji@enbug.org>

	From Adam Lackorzynski <adam@os.inf.tu-dresden.de>:
	* stage2/shared.h (KEY_NPAGE): Changed to 0x5100.
	(KEY_PPAGE): Changed to 0x4900.

2003-03-19  Yoshinori K. Okuji  <okuji@enbug.org>

	* stage2/boot.c (load_image): Check if DATA_LEN plus SECTOR_SIZE
	is less than or equal to MULTIBOOT_SEARCH, instead of if
	DATA_LEN is less than or equal to MULTIBOOT_SEARCH.
	Reported by Neelkanth Natu <neelnatu@yahoo.com>.

2003-03-10  Yoshinori K. Okuji  <okuji@enbug.org>

	From Andrew Walrond <andrew@walrond.org>:
	* stage2/fsys_reiserfs.c (struct reiserfs_journal_header):
	Remove an unnecessary ``long''.

2003-03-10  Yoshinori K. Okuji  <okuji@enbug.org>

	From Tilmann Bubeck:
	* stage2/builtins.c [SUPPORT_SERIAL] (terminfo_func): Unescape
	arguments before copying them, and escape sequences before
	printing them.
	* stage2/terminfo.h (TERMINFO_LEN): Changed to 40.

2003-02-20  Yoshinori K. Okuji  <okuji@enbug.org>

	* util/grub-install.in (find_device): Fix the sed script.

2003-02-17  Yoshinori K. Okuji  <okuji@enbug.org>

	* lib/device.c (check_device): If DEVICE is empty, just return
	1.
	(get_scsi_disk_name) [__QNXNTO__]: Make NAME empty, because SCSI
	disks are detected as IDE disks on QNX RTP.

	From Taketo Kabe <kabe@sra-tohoku.co.jp>:
	* lib/device.c (get_ide_disk_name) [__QNXNTO__]: Set NAME to
	"/dev/hdX".
	(get_floppy_disk_name) [__QNXNTO__]: Set NAME to "/dev/fdX".